--- a/primeui-tester/pom.xml
+++ b/primeui-tester/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>com.axonivy.ivy.webtest</groupId>
     <artifactId>web-config</artifactId>
-    <version>10.0.16-SNAPSHOT</version>
+    <version>10.0.16</version>
     <relativePath>../maven-config</relativePath>
   </parent>
 
   <artifactId>primeui-tester</artifactId>
-  <version>10.0.16-SNAPSHOT</version>
+  <version>10.0.16</version>
   <packaging>jar</packaging>
   
   <name>primeui-tester</name>
