--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,7 @@
 name-template: 'v$RESOLVED_VERSION 🧪'
 tag-template: 'v$RESOLVED_VERSION'
+filter-by-commitish: false
+commitish: master
 categories:
   - title: '🚀 Features'
     labels:
