--- a/web-tester-fixture/pom.xml
+++ b/web-tester-fixture/pom.xml
@@ -24,7 +24,7 @@
       <plugin>
         <groupId>com.axonivy.ivy.ci</groupId>
         <artifactId>project-build-plugin</artifactId>
-        <version>11.4.0-SNAPSHOT</version>
+        <version>${project.build.plugin.version}</version>
         <extensions>true</extensions>
         <configuration>
           <engineListPageUrl>${engine.page.url}</engineListPageUrl>
