--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.axonivy.ivy.webtest</groupId>
   <artifactId>web-config</artifactId>
-  <version>12.0.1-SNAPSHOT</version>
+  <version>12.0.1</version>
   <packaging>pom</packaging>
 
   <licenses>
@@ -26,6 +25,7 @@
     <connection>scm:git:git@github.com:axonivy/web-tester.git</connection>
     <developerConnection>scm:git:git@github.com:axonivy/web-tester.git</developerConnection>
     <url>git@github.com:axonivy/web-tester.git</url>
+    <tag>v12.0.1</tag>
   </scm>
 
   <name>web-config</name>
@@ -201,7 +201,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore></ignore>
+                    <ignore />
                   </action>
                 </pluginExecution>
               </pluginExecutions>
