--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>com.axonivy.ivy.webtest</groupId>
     <artifactId>web-config</artifactId>
-    <version>12.0.1-SNAPSHOT</version>
+    <version>12.0.1</version>
     <relativePath>maven-config</relativePath>
   </parent>
 
   <artifactId>web-module</artifactId>
-  <version>12.0.1-SNAPSHOT</version>
+  <version>12.0.1</version>
   <packaging>pom</packaging>
 
   <modules>
