--- a/web-tester-fixture/pom.xml
+++ b/web-tester-fixture/pom.xml
@@ -7,7 +7,7 @@
   <version>12.0.2-SNAPSHOT</version>
   <packaging>iar-integration-test</packaging>
   <properties>
-    <project.build.plugin.version>12.0.1-SNAPSHOT</project.build.plugin.version>
+    <project.build.plugin.version>12.0.0</project.build.plugin.version>
     <engine.page.url>https://product.ivyteam.io</engine.page.url>
   </properties>
   <dependencies>
