--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,8 +6,7 @@
   ],
   "baseBranches": [
     "master",
-    "release/12.0",
-    "release/10.0"
+    "/^release\\/[0-9\\.]+/"
   ],
   "packageRules": [
     {
@@ -27,8 +26,7 @@
     },
     {
       "matchBaseBranches": [
-        "release/12.0",
-        "release/10.0"
+        "/^release\\/[0-9\\.]+/"
       ],
       "matchDepTypes": [
         "build",
