--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,7 +6,7 @@
   ],
   "baseBranches": [
     "master",
-    "/^release\\/[0-9\\.]+/"
+    "/^release\\/[0-9]{2}\\.[0-9]+/"
   ],
   "packageRules": [
     {
@@ -26,7 +26,7 @@
     },
     {
       "matchBaseBranches": [
-        "/^release\\/[0-9\\.]+/"
+        "/^release\\/[0-9]{2}\\.[0-9]+/"
       ],
       "matchDepTypes": [
         "build",
