--- a/web-tester-fixture/pom.xml
+++ b/web-tester-fixture/pom.xml
@@ -8,6 +8,7 @@
   <packaging>iar-integration-test</packaging>
   <properties>
     <project.build.plugin.version>12.0.1</project.build.plugin.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <engine.page.url>https://product.ivyteam.io</engine.page.url>
   </properties>
   <dependencies>
